# matrix

./: .gitignore  .oxlintrc.json  CLAUDE.md  app.json  global.css  i18next-scanner.config.js  i18next.config.ts  metro.config.js  package-lock.json  package.json
.claude/: settings.local.json
app/: _layout.tsx  paywall.tsx  profile.tsx  projects.tsx  team.tsx
app/(tabs)/: _layout.tsx  add.tsx  calendar.tsx  index.tsx  system.tsx  tasks.tsx
app/auth/: callback.tsx  sign-in.tsx  sign-up.tsx
app/quadrant/: [id].tsx
app/team/: [id].tsx  join.tsx
ci_scripts/: ci_post_clone.sh
docs/: NATIVEWIND.md
docs/best-practices/: DESIGN.md  NATIVEWIND.md
ios/: Podfile
ios/EisenhowerMatrixProductivity/: Info.plist  SplashScreen.storyboard
ios/EisenhowerMatrixProductivity.xcodeproj/: project.pbxproj
ios/EisenhowerMatrixProductivity.xcworkspace/: contents.xcworkspacedata
ios/ci_scripts/: ci_pre_xcodebuild.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DraggableMatrix.tsx  GlassCard.tsx  GoogleSignInButton.tsx  Header.tsx  MetricTile.tsx  ProGate.tsx  SyncPill.tsx  TaskItem.tsx  ViewModeToggle.tsx  ViewModeToggle.web.tsx  WebSidebar.tsx  WorkspacePill.tsx
src/lib/: auth-store.ts  features.ts  glass.ts  i18n.ts  mock-payment.ts  mock-sync.ts  projects-store.ts  query-client.tsx  realtime-sync.ts  store.ts  styled.ts  subscription-store.ts  supabase.ts  teams-store.ts  theme-store.ts  theme.ts  use-online-status.ts  use-pro-status.ts  (+3 more)
supabase/: config.toml
(+44 files in other folders)
