[package]
name = "the-executive"
version = "0.1.0"
description = "Eisenhower Matrix Task Manager"
edition = "2021"

[lib]
name = "the_executive_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
